vlib/v/parser/tests/expecting_assign_type_alias.vv
type Ttt int

fn main() {}
